Update the solution for Q2

--- a/Ex2_Q2.ipynb
+++ b/Ex2_Q2.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "def get_total(input:str):\n",
+    "    out_dict=dict()\n",
     "    l = input.split(\"+\")\n",
     "    total_mass = 0\n",
     "    ato_mass_dict = {\n",
@@ -17,18 +18,31 @@
     "    def split_ato(s:str):\n",
     "        amount = 0\n",
     "        ato = None\n",
-    "        for i,a in enumerate(s):\n",
-    "            if not a.isdigit():\n",
-    "                amount = int(s[:i])\n",
-    "                ato = s[i:]\n",
-    "                return amount,ato\n",
+    "        try:\n",
+    "            for i,a in enumerate(s):\n",
+    "                if not a.isdigit():\n",
+    "                    if i != 0:\n",
+    "                        amount = int(s[:i])\n",
+    "                    else:\n",
+    "                        amount = 1\n",
+    "                    ato = s[i:]\n",
+    "                    return amount,ato\n",
+    "        except Exception as e:\n",
+    "            print(\"Because of {},please input again\".format(e))\n",
+    "            start()\n",
     "    for o in l:\n",
     "        amount,ato=split_ato(o)\n",
-    "        ato_mass = ato_mass_dict[ato]\n",
+    "        try:\n",
+    "            out_dict[ato] += amount\n",
+    "        except:\n",
+    "            out_dict[ato] = amount\n",
+    "        try:\n",
+    "            ato_mass = ato_mass_dict[ato]\n",
+    "        except KeyError as e:\n",
+    "            print(\"We did not recognize {},please input again\".format(e))\n",
+    "            start()\n",
     "        total_mass += amount*ato_mass\n",
-    "    return total_mass\n",
-    "    \n",
-    "                "
+    "    return out_dict,total_mass"
    ]
   },
   {
@@ -49,7 +63,18 @@
     }
    ],
    "source": [
-    "get_total(\"2H+1O\")"
+    "def start():\n",
+    "    user_input=input(\"Please input something:\")\n",
+    "    out_list = []\n",
+    "    out_dict,total_mass = get_total(user_input)\n",
+    "    for a in out_dict.keys():\n",
+    "        a_str = \"\"\n",
+    "        if out_dict[a] >1:\n",
+    "            a_str += str(out_dict[a])\n",
+    "        a_str += a\n",
+    "        out_list.append(a_str)\n",
+    "    print(\"Formula: {} ,Total Mass: {}\".format(\"\".join(out_list),total_mass))\n",
+    "    exit()"
    ]
   },
   {
@@ -58,7 +83,13 @@
    "id": "86d2ebd2-201e-43d7-ba83-2de38802d12c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "try:\n",
+    "    start()\n",
+    "except Exception as e:\n",
+    "    print(\"Because of {},please input again\".format(e))\n",
+    "    start()"
+   ]
   }
  ],
  "metadata": {
